# VidGuard-Diag

./: .gitignore  detectors.py  io_utils.py  main.py  pyproject.toml  readme.txt  requirements.txt
vidguard_diag/: __init__.py  __main__.py  detector.py  session.py
vidguard_diag/hooks/: __init__.py  base.py  builtins.py
