[project]
name = "vidguard-diag"
version = "0.1.0"
description = "Cross-platform video decode monitor — detect green-frame corruption during playback"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.scripts]
vidguard-diag = "vidguard_diag.__main__:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vidguard_diag*"]
